HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumWithoutLayoutC/Source/Main.uv
//! Rejected FFI specimen for enums without layout(C).

public enum FfiPlainEnum {
    Value(i32)
}

extern "C" {
    public procedure importedEnum(value: FfiPlainEnum) -> i32
}

